This project is in a good spot right now. DeterminantController, InverseController, and MatrixController are all working properly (I think). I need add the "general information" FXML file, but that can be handled later. Also, I noticed this bug when trying to use the exponentiation feature. 2^2^3 should return 2^8 -> 256, but instead, it returns 64? I'm sure it's just a bug about the order of operations.